[project]
name = "pixi-pypi-options"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "Ben Moss", email = "bmoss40@bloomberg.com"}]
requires-python = ">= 3.11"
dependencies = ["werkzeug"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
pixi-pypi-options = { path = ".", editable = true }

[tool.pixi.tasks]

[pypi-options]
index-url = "https://example.com/my-repo"
extra-index-urls = ["https://example.com/simple"]
# find-links = [{path: './links'}] # this is invalid
